# cpp_challenge

./: BUILD  CMakeLists.txt  SETUP.md  image_helper.cc  image_helper.h  image_helper_test.cc  main.cc  network_helper.cc  network_helper.h  serialization.cc  serialization.h  serialization_test.cc  test.py  utility.cc  utility.h  utility_test.cc
